--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">LoginApp</string>
     <string name="enter_username">Enter your username</string>
     <string name="enter_btn">Enter</string>
+    <string name="show_repo">Show Repos</string>
+    <string name="avatar_description">AVATAR</string>
 </resources>
